--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
-    <meta name="description" content="Microbiologist, Programmer, Gamer">
+    <meta name="description" content="Comedical things that don't need to be displayed on my home page.">
     <meta charset="UTF-8">
     <meta property="og:image" content="https://media.discordapp.net/attachments/826241646864891955/931423066976813066/20220110_233740.gif">
     <meta property="og:image:width" content="54">
@@ -29,5 +29,5 @@
         <p id="showBBypass" class="font-bold text-white"></p>
     </div>
   </body>
-  <script src="bypassGen.js"></script>
+  <script src="index.js"></script>
 </html>
