--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <title>Luna Hackley</title>
   </head>
   <body class="body overflow-hidden bg-gradient-to-br from-blue-600 to-red-500">
-    <div>
+    <p class="bg-clip-text text-transparent bg-gradient-to-r from-gray-100 to-gray-400 text-3xl font-black">This page has been decomissioned until further notice!</p>
+    <a href="https://lunahackley.gay/" class="bg-clip-text text-transparent bg-gradient-to-r from-gray-100 to-gray-400 text-3xl font-black">Please go to here (click me!) to go to where the Beaner Name Generator is currently located!</a>
+    <!--<div>
       <p class="font-bold text-white">Click to generate a random beaner name</p>
       <label class="bg-clip-text text-transparent bg-gradient-to-r from-gray-100 to-gray-400 text-3xl font-black">Beaner Name Generator</label>
       <button id="beanerButton" class="font-semibold text-lg text-right shadow-md shadow-black rounded border-2 border-solid text-white">Commence Tomfoolery</button>
@@ -27,7 +29,6 @@
         <input type="number" id="amountOfBSlurs" name="amountOfBSlurs">
         <button id="bypassBGen" class="font-semibold text-lg text-right shadow-md shadow-black rounded border-2 border-solid text-white">EL CHAPO GET DOWN</button>
         <p id="showBBypass" class="font-bold text-white"></p>
-    </div>
-  </body>
+    </div>-->
   <script src="index.js"></script>
-</html>
+</body></html>
