--- a/index.html
+++ b/index.html
@@ -2,33 +2,20 @@
   <head>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
-    <meta name="description" content="Comedical things that don't need to be displayed on my home page.">
+    <meta name="description" content="Comedical things that don't need to be displayed on my home page. Home of the Infinity Bypass Generator">
     <meta charset="UTF-8">
-    <meta property="og:image" content="https://media.discordapp.net/attachments/826241646864891955/931423066976813066/20220110_233740.gif">
+    <meta property="og:image" content="https://tenor.com/view/nigga-twerk-twerk-get-real-gif-22738378">
     <meta property="og:image:width" content="54">
     <meta property="og:image:height" content="54">
     <title>Luna Hackley</title>
   </head>
   <body class="body overflow-hidden bg-gradient-to-br from-blue-600 to-red-500">
-    <p class="bg-clip-text text-transparent bg-gradient-to-r from-gray-100 to-gray-400 text-3xl font-black">This page has been decomissioned until further notice!</p>
-    <a href="https://lunahackley.gay/" class="bg-clip-text text-transparent bg-gradient-to-r from-gray-100 to-gray-400 text-3xl font-black">Please go to here (click me!) to go to where the Beaner Name Generator is currently located!</a>
-    <!--<div>
-      <p class="font-bold text-white">Click to generate a random beaner name</p>
-      <label class="bg-clip-text text-transparent bg-gradient-to-r from-gray-100 to-gray-400 text-3xl font-black">Beaner Name Generator</label>
-      <button id="beanerButton" class="font-semibold text-lg text-right shadow-md shadow-black rounded border-2 border-solid text-white">Commence Tomfoolery</button>
-      <p id="showBean" class="font-bold text-white"></p>
-    </div>
-    <div id="bypass">
-        <p class="font-bold text-white">Click to generate a random nword bypass</p>
-        <label class="bg-clip-text text-transparent bg-gradient-to-r from-gray-100 to-gray-400 text-3xl font-black">Enter Amount Of N-Word Bypasses</label>
-        <input type="number" id="amountOfNSlurs" name="amountOfNSlurs">
-        <button id="bypassNGen" class="font-semibold text-lg text-right shadow-md shadow-black rounded border-2 border-solid text-white">MRS. OBAMA GET DOWN</button>
-        <p id="showNBypass" class="font-bold text-white"></p>
-        <p class="font-bold text-white">Click to generate a random beaner bypass</p>
-        <label class="bg-clip-text text-transparent bg-gradient-to-r from-gray-100 to-gray-400 text-3xl font-black">Enter Amount Of Beaner Bypasses</label>
-        <input type="number" id="amountOfBSlurs" name="amountOfBSlurs">
-        <button id="bypassBGen" class="font-semibold text-lg text-right shadow-md shadow-black rounded border-2 border-solid text-white">EL CHAPO GET DOWN</button>
-        <p id="showBBypass" class="font-bold text-white"></p>
-    </div>-->
-  <script src="index.js"></script>
-</body></html>
+    <label class="bg-clip-text text-transparent bg-gradient-to-r from-yellow-100 to-yellow-400 text-3xl font-black">The Infinity Bypass Generator</label>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-16">
+    <p class="bg-clip-text text-transparent bg-gradient-to-r from-gray-100 to-gray-400 text-3xl font-black">Input your desired bypass</p>
+    <input type="text" id="inputBypass">
+    <button id="generateBypass" class="font-semibold text-lg text-right shadow-md shadow-black rounded border-2 border-solid text-white">Show Bypass</button>
+    <p id="showBypass" class="font-bold text-white"></p>
+    <script src="index.js"></script>
+  </body>
+</html>
