--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="main.css" rel="stylesheet">
     <meta name="description" content="Comedical things that don't need to be displayed on my home page. Home of the Infinity Bypass Generator">
     <meta charset="UTF-8">
-    <meta property="og:image" content="https://tenor.com/view/nigga-twerk-twerk-get-real-gif-22738378">
+    <meta property="og:image" content="https://c.tenor.com/b-nOHaTtTmgAAAAS/nigga-twerk-twerk.gif">
     <meta property="og:image:width" content="54">
     <meta property="og:image:height" content="54">
     <title>Luna Hackley</title>
