--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="main.css" rel="stylesheet">
     <meta name="description" content="Comedical things that don't need to be displayed on my home page. Home of the Infinity Bypass Generator">
     <meta charset="UTF-8">
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/346119445569208324/970371051504668682/nigga-twerk-twerk.gif">
+    <meta property="og:image" content="https://i.imgur.com/CA4K8u1.mp4">
     <link rel="shortcut icon" href="http://www.example.com/myicon.ico"/>
     <meta property="og:image:width" content="54">
     <meta property="og:image:height" content="54">
