--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Comedical things that don't need to be displayed on my home page. Home of the Infinity Bypass Generator">
     <meta charset="UTF-8">
     <meta property="og:image" content="https://i.imgur.com/CA4K8u1.mp4">
-    <link rel="shortcut icon" href="http://www.example.com/myicon.ico"/>
+    <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/954026849091059764/970372565388365854/unknown.png"/>
     <meta property="og:image:width" content="54">
     <meta property="og:image:height" content="54">
     <title>Luna Hackley</title>
