--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <input type="text" id="inputBypass">
     <button id="generateBypass" class="font-semibold text-lg text-right shadow-md shadow-black rounded border-2 border-solid text-white">Show Bypass</button>
     <p id="showBypass" class="font-bold text-white"></p>
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
