--- a/fuckyou.html
+++ b/fuckyou.html
@@ -9,14 +9,13 @@
             margin-top: 0px;
         }
     </style>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
     <p id="demo"></p>
     <script>
-        $.getJSON("https://api.ipify.org/?format=json", function(data) {
-            document.getElementById("demo").innerHTML = `Compelling argument. However, ${data.ip}`;
+        $.getJSON("https://api.ipify.org/?format=json", data => {
+            document.getElementById("demo").innerHTML = `Compelling argument. However, ${data.ip}`
         })
     </script>
 </body>
