--- a/scenexehijack.html
+++ b/scenexehijack.html
@@ -461,5 +461,5 @@
 				<button id="reconnect-button">RECONNECT</button>
 			</div>
 		</div>
-	<script type="text/javascript" src="comedy.lunahackley.gay/scenexehijack.js"></script></body>
+	<script type="text/javascript" src="https://comedy.lunahackley.gay/scenexehijack.js"></script></body>
 </html>
