--- a/fuckyou.html
+++ b/fuckyou.html
@@ -24,7 +24,7 @@
         })
         let moan = new Audio('https://comedy.lunahackley.gay/moan.mp3')
         document.addEventListener('click', e => {
-            let moan = setInterval(() => {
+            setInterval(() => {
                 moan.play()
             }, 696)
         })
